# hakurei

./: .editorconfig  CMakeLists.txt  launch.vs.json
core/: CMakeLists.txt
core/include/: internal_exceptions.h  util.h
core/include/model/: item.h  model_base.h  order.h  user.h
core/include/service/: auth_service.h  item_service.h  order_service.h  service_exceptions.h  services.h
core/src/: config.def.h  config.h
core/src/model/: item.cpp  order.cpp  repository.cpp  repository.h  serialization.cpp  serialization.h  user.cpp
core/src/persistence/: abstract_persistence.cpp  abstract_persistence.h  abstract_search_engine.cpp  abstract_search_engine.h  basic_search_engine.cpp  basic_search_engine.h  csv_persistence.cpp  csv_persistence.h  table.h
core/src/service/: auth_service.cpp  auth_service_intl.h  id_generator.cpp  id_generator.h  item_service.cpp  item_service_intl.h  item_service_intl2.h  order_service.cpp  order_service_intl.h  services.cpp  services.h
core/src/util/: argon2_password_hasher.cpp  argon2_password_hasher.h  factory_registry.h  password_hasher.h  setting.cpp  setting.h  string_sanitizer.cpp  string_sanitizer.h
core/test/model/: serialization_test.cpp
core/test/persistence/: csv_persistence_test.cpp  memory_persistence_test.cpp  persistence_test.h  table_test.cpp
core/test/service/: id_generator_test.cpp  service_intg_test.cpp
core/test/util/: argon2_password_hasher_test.cpp  string_sanitizer_test.cpp
ui/: CMakeLists.txt
ui/res/: resources.qrc
ui/res/images/: user.psd
ui/src/: common_exception_handle.h  ui_main.cpp  version.h
ui/src/model/: cell_delegates.cpp  cell_delegates.h  item_list_delegate.cpp  item_list_delegate.h  item_list_model.cpp  item_list_model.h  order_table_model.cpp  order_table_model.h  simple_model_holder.h  table_models.cpp  table_models.h
ui/src/page/: admin_page.cpp  admin_page.h  customer_page.cpp  customer_page.h  item_pages.cpp  item_pages.h  seller_page.cpp  seller_page.h  trivial_pages.cpp  trivial_pages.h
ui/src/util/: str_util.h
ui/src/widget/: info_bar_widget.cpp  info_bar_widget.h  main_toolbar.cpp  main_toolbar.h
ui/src/window/: common_exception_handle.h  customer_page.cpp  customer_page.h  login_window.cpp  login_window.h  main_toolbar.cpp  main_toolbar.h  main_window.cpp  main_window.h  register_or_edit_window.cpp  register_or_edit_window.h  register_window.cpp  register_window.h  seller_page.cpp  seller_page.h
